logs/20251015T161549/syslog
2025-10-15 16:15:49,391 [Logger](CRITICAL): Uncaught exception
Traceback (most recent call last):
  File "./backseat_app/main.py", line 22, in <module>
    from backseat_app.processing import MarlProcessor
  File "/home/maiv/lrauv_sim/lrauv-backseat-marl/backseat_app/processing.py", line 7, in <module>
    from backseat_app.utils import TargetTracking
  File "/home/maiv/lrauv_sim/lrauv-backseat-marl/backseat_app/utils.py", line 900
    print('INFO: Target range= %.2fm'%planarRange)
    ^
SyntaxError: invalid syntax
